<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"

    tools:context="com.cqut.icode.asss_android.fragment.DangerMaintainFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/people"/>

        <EditText
            android:id="@+id/mt_peoples"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:editable="false"
            android:layout_height="wrap_content"
            android:text="@string/fault_description"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="30dp"
            android:id="@+id/mt_description"
            android:background="@drawable/et_selector"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/replace_facility"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="30dp"
            android:id="@+id/replace_facility"
            android:background="@drawable/et_selector"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/is_recover"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/mt_recover"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />
            <RadioButton
                android:id="@+id/mt_no_recover"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/no"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/finished_date"/>

        <EditText
            android:id="@+id/mt_finish_date"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/finished_time"/>

        <EditText
            android:id="@+id/mt_finish_time"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/danger_maintain_remark"/>

        <EditText
            android:id="@+id/dg_mt_remark"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
    </LinearLayout>
</LinearLayout>
