<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.cqut.icode.asss_android.fragment.InspectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/people"/>

        <EditText
            android:id="@+id/inspect_peoples"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/facility_running"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/normal_running"
                />
            <RadioButton
                android:id="@+id/basic_normal"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:text="@string/basic_normal_running"/>
            <RadioButton
                android:id="@+id/abnormal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/abnormal_running"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/hand_ppm"/>

        <EditText
            android:id="@+id/hand_ppm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/facility_ppm"/>

        <EditText
            android:id="@+id/facility_ppm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/finished_date"/>

        <EditText
            android:id="@+id/inspect_finish_date"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/finished_date"/>

        <EditText
            android:id="@+id/inspect_finish_time"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/inspect_remark"/>

        <EditText
            android:id="@+id/inspect_remark"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="30dp"
            android:background="@drawable/et_selector"
            />
    </LinearLayout>
</LinearLayout>
