<?xml version="1.0" encoding="utf-8"?>
<com.mcxtzhang.swipemenulib.SwipeMenuLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="81dp"
    android:background="@color/colorPrimary"
    android:clickable="true"
  >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal">
       <ImageView
           android:id="@+id/img_upload"
           android:layout_width="65dp"
           android:layout_height="65dp"
           android:src="@mipmap/ic_launcher"
           android:layout_margin = "10dp"
           android:layout_gravity="center_vertical"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:padding="5dp"
           android:orientation="vertical">
           <TextView
               android:id="@+id/repair_record_name"
               android:layout_width="match_parent"
               android:layout_height="20dp"
               android:textSize="16sp"
               android:text="@string/test_path"/>
           <ProgressBar
               android:id="@+id/upload_progress"
               android:layout_width="match_parent"
               android:layout_height="17dp"
               android:layout_marginTop="5dp"
               style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <TextView
                   android:id="@+id/upload_tv_state"
                   android:layout_width="70dp"
                   android:maxLines="1"
                   android:gravity="center_vertical"
                   android:layout_height="match_parent"
                   android:text="@string/uploading"
                   android:layout_alignParentLeft="true"/>
               <TextView
                   android:id="@+id/upload_percentage"
                   android:layout_width="40dp"
                   android:layout_height="match_parent"
                   android:maxLines="1"
                   android:gravity="center_vertical"
                   android:text="100%"
                   android:layout_alignParentRight="true"/>
           </RelativeLayout>
       </LinearLayout>
   </LinearLayout>
    <TextView
        android:id="@+id/pause"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:text="@string/pause_upload"
        android:background="@color/gray"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/cancel_upload"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/cancel_upload"
        android:background="@color/yellow"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/re_upload"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:text="@string/re_upload"
        android:textColor="@color/white"
        android:background="@color/red"
        android:gravity="center"
        />

</com.mcxtzhang.swipemenulib.SwipeMenuLayout>