<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context="com.cqut.icode.asss_android.activity.TaskEditActivity">

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/the_theme_toolbar" />

        <TextView
            android:id="@+id/tv_affirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="20dp"
            android:text="@string/affirm"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/task_name"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/task_name"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="3"
                android:background="@drawable/et_selector"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/people"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/peoples"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="3"
                android:background="@drawable/et_selector"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/task_terminal"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/task_terminal"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="3"
                android:background="@drawable/et_selector"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/task_type"
                android:textSize="13dp" />

            <Spinner
                android:id="@+id/task_type"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="3"
                android:background="@drawable/ic_spinner"
                android:entries="@array/task_type" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/task_description"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/task_description"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="3"
                android:background="@drawable/et_selector"
                android:gravity="top"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
